Minikube/Deployment/nginx-deploy/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: custom-html
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: custom-html
          mountPath: /usr/share/nginx/html/hello.html
          subPath: hello.html          
      volumes: 
        - name: custom-html
          configMap:
            name: nginx-index-html
